# DAws

./: Cargo.toml  README.md  done.md  todo.md
cli/: Cargo.toml
cli/src/: commands.rs  config.rs  main.rs  telemetry.rs
core_graph/: Cargo.toml
core_graph/src/: assembly.rs  io.rs  lib.rs  pools.rs  profiling.rs
core_graph/tests/: inhibitory_pools.rs  modulatory_dynamics.rs
core_rules/: Cargo.toml
core_rules/src/: diffusion.rs  lib.rs  reward.rs  scheduler.rs
core_rules/src/diffusion/: fact_recruitment.rs  mod.rs  tests.rs
core_rules/tests/: reward_plasticity.rs
datasets/: Cargo.toml
datasets/src/: lib.rs
docs/: architecture_overview.md  engineering_report.md
evalbench/: Cargo.toml
evalbench/src/: lib.rs  synthetic.rs  xor.rs
evalbench/tests/: diffusion_pipeline.rs  synthetic_bench.rs
model_dec/: Cargo.toml
model_dec/src/: binary.rs  lib.rs
model_enc/: Cargo.toml
model_enc/src/: lib.rs  snapshot.rs  table.rs
retriever/: Cargo.toml
retriever/src/: config.rs  io.rs  lib.rs  store.rs
retriever/src/io/: files.rs  metadata.rs  mod.rs  tensors.rs
retriever/src/store/: tests.rs
src/: diffusion.rs  io.rs  lib.rs  main.rs  reward.rs  signal.rs
tests/: diffusion_pipeline.rs  modulatory_dynamics.rs  reward_plasticity.rs
trainer/: Cargo.toml
trainer/src/: config.rs  dataset.rs  lib.rs  metrics.rs  offline.rs  online.rs  optimizer.rs
