[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
core_graph = { path = "../core_graph" }
core_rules = { path = "../core_rules" }
evalbench = { path = "../evalbench" }
pprof = { version = "0.13", features = ["flamegraph"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
