[package]
name = "model_enc"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-core = { version = "0.9" }
candle-nn = { version = "0.9" }
candle-transformers = { version = "0.9" }
hf-hub = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokenizers = "0.15"
bytemuck = "1.14"
safetensors = "0.4"

[dev-dependencies]
tempfile = "3.10"

